--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,8 @@ cmake_minimum_required(VERSION 3.2)
 project(usb)
 aux_source_directory(. SRC)
 include_directories(include)
-add_library(usb SHARED ${SRC})
+add_library(usb ${SRC})
+add_executable(xusb test/xusb.c)
+add_executable(listdevs test/listdevs.c)
+target_link_libraries(xusb usb pthread udev)
+target_link_libraries(listdevs usb pthread udev)
