--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(usb)
 aux_source_directory(. SRC)
 include_directories(include)
 add_library(usb ${SRC})
+add_compile_definitions(_GNU_SOURCE)
 add_executable(xusb test/xusb.c)
 add_executable(listdevs test/listdevs.c)
 target_link_libraries(xusb usb pthread udev)
